k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medical-shop-app
  namespace: medical-shop
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: medical-shop
  template:
    metadata:
      labels:
        app: medical-shop
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "5000"
    spec:
      containers:
        - name: medical-shop
          image: REPLACE_WITH_DOCKERHUB_USERNAME/medical-shop:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 45
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 768Mi
