k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: medical-shop
  namespace: medical-shop
spec:
  type: ClusterIP
  selector:
    app: medical-shop
  ports:
    - name: http
      port: 80
      targetPort: 5000
